[gd_scene load_steps=12 format=3 uid="uid://do0gv16j1vyv8"]

[ext_resource type="Texture2D" uid="uid://ia5jl4w8cidw" path="res://assets/background/rocks_2.png" id="1_aj1yj"]
[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_wrupc"]
[ext_resource type="PackedScene" uid="uid://csngobh3jc1fg" path="res://scenes/gameOverUi/game_over_ui.tscn" id="2_1gnne"]
[ext_resource type="PackedScene" uid="uid://b24io4558myat" path="res://scenes/ParallaxImage/parallax_image.tscn" id="2_8k3n8"]
[ext_resource type="PackedScene" uid="uid://d2cvelaxrta00" path="res://scenes/scrollingBg/scrolling_bg.tscn" id="2_pk66a"]
[ext_resource type="PackedScene" uid="uid://co80fl0pa5e0i" path="res://scenes/plane/Plane.tscn" id="2_ygcgr"]
[ext_resource type="PackedScene" uid="uid://db8yf24hdb844" path="res://scenes/barrier/barrier.tscn" id="3_3t3p5"]
[ext_resource type="Texture2D" uid="uid://coryaqnbkuppa" path="res://assets/background/sky.png" id="3_b5mcm"]
[ext_resource type="PackedScene" uid="uid://chdf2sq63wsft" path="res://scenes/hud/hud.tscn" id="3_kekx7"]
[ext_resource type="Texture2D" uid="uid://cia7olnua7e5d" path="res://assets/background/clouds_2.png" id="4_bxn55"]
[ext_resource type="Texture2D" uid="uid://i1t1y07oc1vj" path="res://assets/background/rocks_1.png" id="5_ca4kd"]

[node name="Game" type="Node2D"]
script = ExtResource("1_wrupc")
metadata/_edit_horizontal_guides_ = [225.0]

[node name="ParallaxBg" type="Node2D" parent="."]
position = Vector2(0, 427)

[node name="ParallaxImage" parent="ParallaxBg" instance=ExtResource("2_8k3n8")]
scroll_scale = Vector2(0, 0)
texture = ExtResource("3_b5mcm")

[node name="Parallax2D" parent="ParallaxBg" instance=ExtResource("2_8k3n8")]
scroll_scale = Vector2(0.3, 0.3)
texture = ExtResource("4_bxn55")

[node name="ParallaxImage3" parent="ParallaxBg" instance=ExtResource("2_8k3n8")]
scroll_scale = Vector2(0.5, 0.5)
texture = ExtResource("5_ca4kd")

[node name="ParallaxImage4" parent="ParallaxBg" instance=ExtResource("2_8k3n8")]
scroll_scale = Vector2(0.75, 0.75)
texture = ExtResource("1_aj1yj")

[node name="ScrollingBg" parent="." instance=ExtResource("2_pk66a")]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverUi" parent="CanvasLayer" instance=ExtResource("2_1gnne")]

[node name="Hud" parent="CanvasLayer" instance=ExtResource("3_kekx7")]

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
z_index = -2
z_as_relative = false
y_sort_enabled = true
position = Vector2(316, 418)
texture = ExtResource("1_aj1yj")

[node name="Plane" parent="." instance=ExtResource("2_ygcgr")]
position = Vector2(96, 467)

[node name="Barrier" parent="." instance=ExtResource("3_3t3p5")]
position = Vector2(473, 0)
rotation = 3.14159

[node name="Barrier2" parent="." instance=ExtResource("3_3t3p5")]
position = Vector2(-3, 855)

[node name="Spawn" type="Node" parent="."]

[node name="SpawnUpper" type="Marker2D" parent="Spawn"]
position = Vector2(530, 340)

[node name="SpawnLower" type="Marker2D" parent="Spawn"]
position = Vector2(530, 540)

[node name="SpawnTimer" type="Timer" parent="Spawn"]
wait_time = 1.9
autostart = true

[node name="PipeHolder" type="Node" parent="."]
